# doty

./: README.md  pyproject.toml
src/doty/: __main__.py  schema.sql
