[project]
name = "doty"
version = "0.1.0"
description = "Doty - A simple ebook manager, dependent on Zathura."
authors = [
    { name = "myxi", email = "myxi@envs.net" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
doty = "doty.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/doty"]
